# clang-plugin

./: .clang-tidy  CMakeLists.txt  EpitaFunctionArgsCountCheck.cpp  EpitaSwitchCaseIndentationCheck.cpp  FunctionSizeCheck.cpp  clang-tidy.sh
